--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
       </article>
     </article>
     <script>
-      var body = document.getElementById('wrapper');
-var except = document.getElementById('except');
+      var body = document.getElementsByClassName('wrapper');
+var except = document.getElementsByClassName('except');
 
 body.addEventListener("click", function () {
     alert("wrapper");
