--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="./js/app.js"></script>
   </head>
   <body>
     <article class="message">
@@ -30,6 +29,23 @@
         <p>Microsoft Edge is a web browser developed by Microsoft, released in 2015. Microsoft Edge replaced Internet Explorer.</p>
       </article>
     </article>
+    <script>window.addEventListener("DOMContentLoaded", () => {
+      // This block will be executed once the page is loaded and ready
+    
+      document.body.addEventListener("click",() =>{
+        const length=5;
+        let count=0;
+        for(let i=0;i<length;i++){
+          let element=document.createElement('article');
+          count+=length;
+          element.setAttribute('id','article' + count);
+          document.body.appendChild(element);
+          let text='sampleText';
+          document.getElementById('article'+count).innerHTML=text;
+          document.getElementById('article'+count).classList.add('message');
+        }
+      });
+    });</script>
     <div class="main">
       <div class="message"></div>
       <div class="emoji mb-6">💣🤯💥</div>
