--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+    <div>
     <article class="message">
       <h1>Most Popular Browsers</h1>
       <article class="message">
@@ -46,6 +47,7 @@
         }
       });
     });</script>
+    </div>
     <div class="main">
       <div class="message"></div>
       <div class="emoji mb-6">💣🤯💥</div>
