--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
     <script src="./js/app.js"></script>
   </head>
   <body>
+    <div>
+      <article>
+        <h2>hello</h2>
+      </article>
+    </div>
     <div class="main">
       <div class="message"></div>
       <div class="emoji mb-6">💣🤯💥</div>
