--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,20 @@
     <script src="./js/app.js"></script>
   </head>
   <body>
-    <div>
-      <article>
+    <div class="message">
+      <article class="message">
+        <h2>hello</h2>
+      </article>
+      <article class="message">
+        <h2>hello</h2>
+      </article>
+      <article class="message">
+        <h2>hello</h2>
+      </article>
+      <article class="message">
+        <h2>hello</h2>
+      </article>
+      <article class="message">
         <h2>hello</h2>
       </article>
     </div>
